--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <div class="container">
             <nav>
                 <a href="#header"><img src="images/logo.PNG" class="logo"></a>
-                <ul>
+                <ul id="sidemenu">
                     <li><a href="#about">About</a></li>
                     <li><a href="#background">Background</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#blogs">Blogs</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <svg class="menu-icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" width="40px" height="40px">
+                    <svg class="menu-icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" width="30px" height="30px" onclick="closemenu()">
                         <path d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"/>
                     </svg> 
                 </ul>
-                <svg class="menu-icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"  width="40px" height="40px">
+                <svg class="menu-icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"  width="30px" height="30px" onclick="openmenu()">
                     <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/>
                 </svg> 
             </nav>
@@ -275,5 +275,19 @@
     return true;
 }
 }
-    </script>
+</script>
+
+<!--sidemenu -->
+<script>
+
+    var sidemeu=getElementById("sidemenu");
+    
+    function openmenu(){
+        sidemeu.style.right = "0px";
+    }
+    function openmenu(){
+        sidemeu.style.right = "-200px";
+    }
+
+</script>
 </html>
