--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
         </div>
         
     </div>
+    <!--Sing up-->
+    <div class="sing-up">
+        <a href="/singUp.html">Join Our Community</a>
+    </div>
     <!-------Contact----------->
     <div class="contact" id="contact">
         <div class="contact-container">
@@ -200,6 +204,8 @@
         </div>
     </div>
 </body>
+<!----validation script---->
+
 <script>
 
     function validate(){
