changing background pic and updating readme

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>Full Stack Developer<br>& Web Designer</p>
                 <h1>Hi, I'm <span>Ken</span><br>Mugisha</h1>
             </div>
-            <img src="images/background_pic.jpg" width="520px" height="624px" alt="bckgrnd_img" class="bckgrnd-img">
+            <img src="images/temp_background_pic.jpg" width="520px" height="624px" alt="bckgrnd_img" class="bckgrnd-img">
         </div> 
     </div>
     <!---------about--------->
